# bookshelf_scanner

./: .gitignore  README.md  app.py  boxes.py  ocr.py  process.py  pyproject.toml  requirements.txt  vercel.json
api/: main.py  models.py
