[tool.poetry]
name = "bookshelf-rater"
version = "0.1.0"
description = ""
authors = ["Mark <woodwardmw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
openai = "^1.41.0"
pandas = "^2.2.2"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-multipart = "^0.0.19"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
